# bevy_aseprite_ultra

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
assets/: ball.aseprite  ghost_slices.aseprite  material_extension_shader.wgsl  my_shader.wgsl  my_shader3d.wgsl  player.aseprite
examples/: 3d.rs  alternative_target.rs  animation.rs  extended_material.rs  manual.rs  move_player.rs  queue.rs  shader.rs  slices.rs  ui.rs
examples/processing/: asset_processing.rs
src/: animation.rs  error.rs  lib.rs  loader.rs  processor.rs  slice.rs
