[package]
name = "bevy_aseprite_ultra"
version = "0.4.1"
edition = "2021"
authors = ["Lorenz Mielke"]
description = "A Bevy plugin for directly loading spritesheets and animations from aseprite binary files with hot reloading support."
keywords = ["bevy", "aseprite", "atlas", "loader", "animation"]
repository = "https://github.com/Lommix/bevy_aseprite_ultra.git"
license = "MIT"
readme = "README.md"

[dependencies]
bevy = { version = "0.16.0-rc.2", default-features = false, features = [
  "bevy_sprite",
  "bevy_asset",
  "bevy_ui",
  "png",
] }
aseprite-loader = "0.3.3"
uuid = "1.9.1"
thiserror = "2.0.0"
serde = "1.0.218"


[dev-dependencies]
bevy = { version = "0.16.0-rc.2", features = [
  "file_watcher",
  "multi_threaded",
  "bevy_window",
] }
