[package]
name = "bevy_aseprite_ultra"
version = "0.6.0"
edition = "2021"
authors = ["Lorenz Mielke"]
description = "A Bevy plugin for directly loading spritesheets and animations from aseprite binary files with hot reloading support."
keywords = ["bevy", "aseprite", "atlas", "loader", "animation"]
repository = "https://github.com/Lommix/bevy_aseprite_ultra.git"
license = "MIT"
readme = "README.md"

[dependencies]
bevy = { version = "0.16", default-features = false, features = [
  "bevy_pbr",
  "bevy_sprite",
  "bevy_asset",
  "bevy_ui",
  "bevy_log",
  "png",
] }
aseprite-loader = "0.3.3"
uuid = "1.9.1"
thiserror = "2.0.0"
serde = "1.0.218"
rmp-serde = { version = "1.3.0", optional = true }
image = { version = "0.25.6", optional = true }


[dev-dependencies]
bevy = { version = "0.16", features = [
  "file_watcher",
  "multi_threaded",
  "bevy_window",
] }

[features]
asset_processing = [
  "bevy/serialize",
  "bevy/qoi",
  "dep:rmp-serde",
  "dep:image",
  "bevy/asset_processor",
]

[[example]]
name = "asset_processing"
path = "examples/processing/asset_processing.rs"
required-features = ["asset_processing"]
